# astrbot_orchestrator

./: .gitattributes  .gitignore  CLAUDE.md  README.md  SECURITY.md  __init__.py  _conf_schema.json  _metadata.yaml  main.py  metadata.yaml  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml
_astrbot_stub/astrbot/: __init__.py
artifacts/: __init__.py  service.py
astrbot_orchestrator_v5/: __init__.py
autonomous/: __init__.py  debugger.py  env_fixer.py  execution_facades.py  execution_support.py  executor.py  mcp_configurator.py  plugin_manager.py  sandbox_runtime.py  skill_creator.py
docs/: architecture.md  commands.md  configuration.md
entrypoints/: __init__.py  command_handlers.py
orchestrator/: __init__.py  agent_bus.py  agent_coordinator.py  agent_registry.py  agent_runner.py  agent_templates.py  capability_builder.py  code_extractor.py  core.py  dynamic_agent_manager.py  mcp_bridge.py  meta_orchestrator.py  skill_loader.py  task_analyzer.py
runtime/: __init__.py  container.py  graph_state.py  pipeline.py  request_context.py
sandbox/: __init__.py  base.py  factory.py  local_sandbox.py  shipyard_sandbox.py  types.py
shared/: __init__.py  conditions.py  path_safety.py  path_utils.py
tests/: conftest.py
tests/unit/: test_agent_coordinator.py  test_agent_registry.py  test_agent_runner.py  test_agent_templates.py  test_artifact_service.py  test_capability_builder.py  test_code_extractor.py  test_command_handlers.py  test_debugger.py  test_dynamic_agent_manager.py  test_dynamic_orchestrator_core.py  test_dynamic_orchestrator_runtime.py  test_env_fixer.py  test_execution_facades.py  test_execution_manager.py  test_main.py  (+27 more)
tools/: __init__.py  base.py  debug_tools.py  mcp_tools.py  plugin_tools.py  sandbox_tools.py  skill_tools.py  workflow_tools.py
workflow/: __init__.py  engine.py  nodes.py
workflows/: example_analysis.yaml  example_research.yaml  example_simple.yaml
(+44 files in other folders)
