[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrbot-orchestrator-v5"
version = "3.0.0"
description = "AstrBot agent orchestrator plugin with LangGraph-inspired runtime design."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "lijiarui" },
]
dependencies = [
  "aiohttp>=3.9,<4",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "aioresponses>=0.7.6,<1",
  "bandit>=1.7.9,<2",
  "mypy>=1.11,<2",
  "pip-audit>=2.7,<3",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "pytest-cov>=5,<6",
  "pytest-mock>=3.14,<4",
  "ruff>=0.6.9,<1",
  "types-pyyaml>=6.0.12.20250915",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["astrbot_orchestrator_v5*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config --cov=astrbot_orchestrator_v5 --cov-branch"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "error",
  "ignore::coverage.exceptions.CoverageWarning",
  "ignore::pytest.PytestUnraisableExceptionWarning",
  "ignore::DeprecationWarning:pytest_asyncio",
]

[tool.coverage.run]
branch = true
source = ["astrbot_orchestrator_v5"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["astrbot_orchestrator_v5"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = ["shared"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[tool.bandit]
exclude_dirs = ["tests"]
